# CollaborativeWorkflow

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: server.hpp  startClient.cpp  startServer.cpp
src/client/buttons/: button.cpp  button.hpp
src/client/definitions/: uiConfig.hpp
src/client/shapes/: rectangle.cpp
src/client/texts/: text.hpp
src/client/windows/: windowEditor.hpp  windowHome.cpp
src/client/windows/base/: windowBase.hpp
src/components/: client.cpp  client.hpp  server.cpp
src/components/client/buttons/: buttonType.hpp
src/components/client/definitions/: box.hpp  point.hpp
src/components/client/editor/: editor.cpp  editor.hpp
src/components/client/shapes/: rectangle.hpp
src/components/client/texts/: text.cpp
src/components/client/windows/: windowEditor.cpp  windowHome.hpp
src/components/client/windows/base/: windowBase.cpp  windowBase.hpp
src/components/descriptors/: file.hpp
src/components/descriptors/base/: descriptor.cpp  iodescriptor.cpp  iodescriptor.hpp
src/components/scripts/: exec.hpp
src/components/server/handlers/: clientHandler.hpp
src/components/server/handlers/base/: clientHandlerBase.cpp
src/descriptors/: file.cpp  socket.cpp  socket.hpp
src/descriptors/base/: descriptor.hpp
src/getStringWindow/: CMakeLists.txt  entryWindow.cpp  entryWindow.hpp  main.cpp
src/scripts/: exec.cpp
src/server/: supervisor.cpp  supervisor.hpp
src/server/handlers/: clientHandler.cpp
src/server/handlers/base/: clientHandlerBase.hpp
src/utils/: logs.cpp  logs.hpp
